--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                             <i class='bx bx-square-rounded'></i>
                             <p>2. ¿Qué son las Buenas Prácticas de Documentación? </p>
                         </li>
-                        <li class="temas titulo_temas">
-                            <p>3. Lineamientos </p>
+                        <li>
+                            3. Lineamientos
                         </li>
                         <li class="temas" data-pagina="5">
                             <i class='bx bx-square-rounded'></i>
@@ -114,31 +114,59 @@
                             <i class='bx bx-square-rounded'></i>
                             <p>Actividad de reforzamiento </p>
                         </li>
-                        <li class="temas titulo_temas" data-pagina="9">
-                            <i class='bx bx-square-rounded'></i>
-                            <p>5. Manejo de copias </p>
-                        </li>
                         <li class="temas titulo_temas" data-pagina="10">
                             <i class='bx bx-square-rounded'></i>
-                            <p>6. Catálogo de firmas </p>
+                            <p>5. CD-137630 I.T.A.: Manejo de copias verdaderas, oficiales y no oficiales</p>
                         </li>
                         <li class="temas titulo_temas" data-pagina="11">
                             <i class='bx bx-square-rounded'></i>
-                            <p>7. I.T.A Uso del Sistema para Firma Electrónica</p>
+                            <p>6. CD-137633 I.T.A.: Disposición de documentos y registros</p>
                         </li>
-                        <li class="temas titulo_temas" data-pagina="13">
+                        <li class="temas titulo_temas" data-pagina="12">
                             <i class='bx bx-square-rounded'></i>
-                            <p>I.T.A. “Uso de memorándum y lista de asistencia”</p>
+                            <p>7. CD-137628 vigente I.T.A.: Ciclo de vida de sistema de datos GMP</p>
                         </li>
-                        <li class="temas titulo_temas" data-pagina="15">
+                        <li class="temas titulo_temas" data-pagina="14">
                             <i class='bx bx-square-rounded'></i>
-                            <p>I.T.A. “Verificación contemporánea en segunda persona”</p>
+                            <p>8. CD-137632 I.T.A.: Uso de memorándum y lista de asistencia</p>
                         </li>
-                        <li class="temas titulo_temas" data-pagina="16">
+                        <li class="temas titulo_temas" data-pagina="18">
+                            <i class='bx bx-square-rounded'></i>
+                            <p>9. CD-137634 I.T.A.: Reconciliación de documentos GMP</p>
+                        </li>
+                        <li class="temas titulo_temas" data-pagina="19">
+                            <i class='bx bx-square-rounded'></i>
+                            <p>10. CD-137631 I.T.A.: Verificación contemporánea en segunda persona</p>
+                        </li>
+                        <li class="temas titulo_temas" data-pagina="23">
+                            <i class='bx bx-square-rounded'></i>
+                            <p>Actividad de reforzamiento</p>
+                        </li>
+                        <li class="temas titulo_temas" data-pagina="25">
+                            <i class='bx bx-square-rounded'></i>
+                            <p>11. CD-137635 I.T.A.: “Manejo de espacios en blanco</p>
+                        </li>
+                        <li class="temas titulo_temas" data-pagina="25">
+                            <i class='bx bx-square-rounded'></i>
+                            <p>Uso de sellos</p>
+                        </li>
+                        <li class="temas titulo_temas" data-pagina="25">
+                            <i class='bx bx-square-rounded'></i>
+                            <p>Uso de correo electrónico</p>
+                        </li>
+                        <li class="temas titulo_temas" data-pagina="25">
+                            <i class='bx bx-square-rounded'></i>
+                            <p>Revisión y aprobación de documentos o registros de buenas prácticas</p>
+                        </li>
+                        <li class="temas titulo_temas" data-pagina="26">
+                            <i class='bx bx-square-rounded'></i>
+                            <p>Manejo de Fotografías</p>
+                        </li>
+                        <li class="temas titulo_temas" data-pagina="27">
                             <i class='bx bx-square-rounded'></i>
                             <p>Evaluación final </p>
                         </li>
-                        <li class="temas titulo_temas" data-pagina="17">
+                        <li class="temas titulo_temas" data-pagina="29">
                             <i class='bx bx-square-rounded'></i>
                             <p>Cierre </p>
                         </li>
