--- a/paginas/pagina26.html
+++ b/paginas/pagina26.html
@@ -71,7 +71,7 @@
         const informacion1 = [info1_2, info1_3, info1_4, info1_5];
         let indexInfo1 = 0;
 
-        const informacion2 = [info2_1, info2_3, info2_4, info2_5, info2_6, info2_7];
+        const informacion2 = [info2_1, info2_2, info2_3, info2_4, info2_5, info2_6, info2_7];
         let indexInfo2 = 0;
 
         // Audios------------------------------------------------------
