--- a/paginas/pagina17.html
+++ b/paginas/pagina17.html
@@ -63,7 +63,7 @@
         });
 
         function iniciarContenido(){
-            animacionEntrada(fondo, 'default', 1, 1);
+            animacionEntrada(fondo, 'default', 1);
             narrarInfo()
         }
 
